tests/errors/sem_test10.py
# sem_tests10.py 
test = 5 + "hey"
print(test)